--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,11 +18,13 @@
       "react-dom": "^18.3.1",
       "react-flags-select": "^2.2.3",
       "react-icons": "^5.2.1",
+      "react-international-phone": "^4.3.0",
       "react-lottie": "^1.2.4",
       "react-redux": "^9.1.2",
       "react-router-dom": "^6.24.1",
       "react-spinners": "^0.14.1",
       "react-toastify": "^10.0.5",
+      "react-type-animation": "^3.2.0",
       "yup": "^1.4.0"
    },
    "devDependencies": {
