--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,11 @@
       "preview": "vite preview"
    },
    "dependencies": {
-      "@reduxjs/toolkit": "^2.2.6",
+      "@reduxjs/toolkit": "^2.2.7",
       "axios": "^1.7.2",
       "country-state-city": "^3.2.1",
       "formik": "^2.4.6",
+      "prop-types": "^15.8.1",
       "react": "^18.3.1",
       "react-dom": "^18.3.1",
       "react-flags-select": "^2.2.3",
@@ -25,6 +26,9 @@
       "react-spinners": "^0.14.1",
       "react-toastify": "^10.0.5",
       "react-type-animation": "^3.2.0",
+      "redux": "^5.0.1",
+      "redux-thunk": "^3.1.0",
+      "redux-toolkit": "^1.1.2",
       "yup": "^1.4.0"
    },
    "devDependencies": {
