--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
       "react-lottie": "^1.2.4",
       "react-redux": "^9.1.2",
       "react-router-dom": "^6.24.1",
+      "react-select": "^5.8.0",
       "react-spinners": "^0.14.1",
       "react-toastify": "^10.0.5",
       "react-type-animation": "^3.2.0",
