--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
       "redux": "^5.0.1",
       "redux-thunk": "^3.1.0",
       "redux-toolkit": "^1.1.2",
+      "swiper": "^11.1.9",
       "yup": "^1.4.0"
    },
    "devDependencies": {
