--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
       "@reduxjs/toolkit": "^2.2.8",
       "axios": "^1.7.7",
       "country-state-city": "^3.2.1",
+      "faker": "^6.6.6",
       "formik": "^2.4.6",
       "prop-types": "^15.8.1",
       "react": "^18.3.1",
