--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
       "preview": "vite preview"
    },
    "dependencies": {
-      "@reduxjs/toolkit": "^2.2.8",
+      "@reduxjs/toolkit": "^2.3.0",
       "axios": "^1.7.7",
       "country-state-city": "^3.2.1",
       "faker": "^6.6.6",
@@ -21,12 +21,13 @@
       "react-flags-select": "^2.2.3",
       "react-icons": "^5.3.0",
       "react-international-phone": "^4.3.0",
+      "react-loading-skeleton": "^3.5.0",
       "react-lottie": "^1.2.4",
       "react-redux": "^9.1.2",
-      "react-router-dom": "^6.26.2",
-      "react-select": "^5.8.1",
+      "react-router-dom": "^6.27.0",
+      "react-select": "^5.8.2",
       "react-spinners": "^0.14.1",
-      "react-toastify": "^10.0.5",
+      "react-toastify": "^10.0.6",
       "react-type-animation": "^3.2.0",
       "redux": "^5.0.1",
       "redux-thunk": "^3.1.0",
@@ -35,16 +36,16 @@
       "yup": "^1.4.0"
    },
    "devDependencies": {
-      "@types/react": "^18.3.11",
-      "@types/react-dom": "^18.3.0",
-      "@vitejs/plugin-react": "^4.3.2",
+      "@types/react": "^18.3.12",
+      "@types/react-dom": "^18.3.1",
+      "@vitejs/plugin-react": "^4.3.3",
       "autoprefixer": "^10.4.20",
-      "eslint": "^9.12.0",
-      "eslint-plugin-react": "^7.37.1",
-      "eslint-plugin-react-hooks": "^4.6.2",
-      "eslint-plugin-react-refresh": "^0.4.12",
+      "eslint": "^9.14.0",
+      "eslint-plugin-react": "^7.37.2",
+      "eslint-plugin-react-hooks": "^5.0.0",
+      "eslint-plugin-react-refresh": "^0.4.14",
       "postcss": "^8.4.47",
-      "tailwindcss": "^3.4.13",
-      "vite": "^5.4.8"
+      "tailwindcss": "^3.4.14",
+      "vite": "^5.4.10"
    }
 }
