--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
       "redux": "^5.0.1",
       "redux-thunk": "^3.1.0",
       "redux-toolkit": "^1.1.2",
+      "sweetalert2": "^11.14.5",
       "swiper": "^11.1.14",
       "yup": "^1.4.0"
    },
