--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
       "react-select": "^5.8.3",
       "react-spinners": "^0.14.1",
       "react-toastify": "^10.0.6",
+      "react-tooltip": "^5.28.0",
       "react-type-animation": "^3.2.0",
       "redux": "^5.0.1",
       "redux-thunk": "^3.1.0",
