--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,23 +10,24 @@
       "preview": "vite preview"
    },
    "dependencies": {
-      "@reduxjs/toolkit": "^2.3.0",
-      "axios": "^1.7.7",
+      "@react-pdf/renderer": "^4.1.5",
+      "@reduxjs/toolkit": "^2.4.0",
+      "axios": "^1.7.9",
       "country-state-city": "^3.2.1",
       "faker": "^6.6.6",
       "formik": "^2.4.6",
       "prop-types": "^15.8.1",
-      "react": "^18.3.1",
-      "react-dom": "^18.3.1",
+      "react": "^19.0.0",
+      "react-dom": "^19.0.0",
       "react-flags-select": "^2.2.3",
-      "react-icons": "^5.3.0",
+      "react-icons": "^5.4.0",
       "react-international-phone": "^4.3.0",
       "react-loading-skeleton": "^3.5.0",
-      "react-lottie": "^1.2.4",
+      "react-lottie": "^1.2.10",
       "react-redux": "^9.1.2",
-      "react-router-dom": "^6.28.0",
+      "react-router-dom": "^7.0.2",
       "react-select": "^5.8.3",
-      "react-spinners": "^0.14.1",
+      "react-spinners": "^0.15.0",
       "react-toastify": "^10.0.6",
       "react-tooltip": "^5.28.0",
       "react-type-animation": "^3.2.0",
@@ -34,20 +35,20 @@
       "redux-thunk": "^3.1.0",
       "redux-toolkit": "^1.1.2",
       "sweetalert2": "^11.14.5",
-      "swiper": "^11.1.14",
-      "yup": "^1.4.0"
+      "swiper": "^11.1.15",
+      "yup": "^1.5.0"
    },
    "devDependencies": {
-      "@types/react": "^18.3.12",
-      "@types/react-dom": "^18.3.1",
-      "@vitejs/plugin-react": "^4.3.3",
+      "@types/react": "^19.0.1",
+      "@types/react-dom": "^19.0.1",
+      "@vitejs/plugin-react": "^4.3.4",
       "autoprefixer": "^10.4.20",
-      "eslint": "^9.14.0",
+      "eslint": "^9.16.0",
       "eslint-plugin-react": "^7.37.2",
-      "eslint-plugin-react-hooks": "^5.0.0",
-      "eslint-plugin-react-refresh": "^0.4.14",
+      "eslint-plugin-react-hooks": "^5.1.0",
+      "eslint-plugin-react-refresh": "^0.4.16",
       "postcss": "^8.4.49",
-      "tailwindcss": "^3.4.14",
-      "vite": "^5.4.11"
+      "tailwindcss": "^3.4.16",
+      "vite": "^6.0.3"
    }
 }
