--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,8 @@
       "preview": "vite preview"
    },
    "dependencies": {
-      "@react-pdf/renderer": "^4.1.5",
-      "@reduxjs/toolkit": "^2.4.0",
+      "@react-pdf/renderer": "^4.1.6",
+      "@reduxjs/toolkit": "^2.5.0",
       "axios": "^1.7.9",
       "country-state-city": "^3.2.1",
       "faker": "^6.6.6",
@@ -21,34 +21,35 @@
       "react-dom": "^19.0.0",
       "react-flags-select": "^2.2.3",
       "react-icons": "^5.4.0",
-      "react-international-phone": "^4.3.0",
+      "react-international-phone": "^4.4.0",
       "react-loading-skeleton": "^3.5.0",
       "react-lottie": "^1.2.10",
-      "react-redux": "^9.1.2",
-      "react-router-dom": "^7.0.2",
-      "react-select": "^5.8.3",
+      "react-otp-input": "^3.1.1",
+      "react-redux": "^9.2.0",
+      "react-router-dom": "^7.1.1",
+      "react-select": "^5.9.0",
       "react-spinners": "^0.15.0",
-      "react-toastify": "^10.0.6",
+      "react-toastify": "^11.0.3",
       "react-tooltip": "^5.28.0",
       "react-type-animation": "^3.2.0",
       "redux": "^5.0.1",
       "redux-thunk": "^3.1.0",
       "redux-toolkit": "^1.1.2",
-      "sweetalert2": "^11.14.5",
-      "swiper": "^11.1.15",
-      "yup": "^1.5.0"
+      "sweetalert2": "^11.15.10",
+      "swiper": "^11.2.1",
+      "yup": "^1.6.1"
    },
    "devDependencies": {
-      "@types/react": "^19.0.1",
-      "@types/react-dom": "^19.0.1",
+      "@types/react": "^19.0.7",
+      "@types/react-dom": "^19.0.3",
       "@vitejs/plugin-react": "^4.3.4",
       "autoprefixer": "^10.4.20",
-      "eslint": "^9.16.0",
-      "eslint-plugin-react": "^7.37.2",
+      "eslint": "^9.18.0",
+      "eslint-plugin-react": "^7.37.4",
       "eslint-plugin-react-hooks": "^5.1.0",
-      "eslint-plugin-react-refresh": "^0.4.16",
-      "postcss": "^8.4.49",
-      "tailwindcss": "^3.4.16",
-      "vite": "^6.0.3"
+      "eslint-plugin-react-refresh": "^0.4.18",
+      "postcss": "^8.5.1",
+      "tailwindcss": "^3.4.17",
+      "vite": "^6.0.7"
    }
 }
