--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,46 +10,47 @@
       "preview": "vite preview"
    },
    "dependencies": {
-      "@react-pdf/renderer": "^4.1.6",
-      "@reduxjs/toolkit": "^2.5.0",
-      "axios": "^1.7.9",
+      "@react-pdf/renderer": "^4.3.0",
+      "@reduxjs/toolkit": "^2.6.1",
+      "@tailwindcss/vite": "^4.0.14",
+      "axios": "^1.8.3",
       "country-state-city": "^3.2.1",
       "faker": "^6.6.6",
       "formik": "^2.4.6",
+      "otp-generator": "^4.0.1",
       "prop-types": "^15.8.1",
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
-      "react-flags-select": "^2.2.3",
-      "react-icons": "^5.4.0",
+      "react-flags-select": "^2.4.0",
+      "react-icons": "^5.5.0",
       "react-international-phone": "^4.5.0",
       "react-loading-skeleton": "^3.5.0",
       "react-lottie": "^1.2.10",
       "react-otp-input": "^3.1.1",
       "react-redux": "^9.2.0",
-      "react-router-dom": "^7.1.3",
-      "react-select": "^5.10.0",
+      "react-router-dom": "^7.3.0",
+      "react-select": "^5.10.1",
       "react-spinners": "^0.15.0",
-      "react-toastify": "^11.0.3",
+      "react-toastify": "^11.0.5",
       "react-tooltip": "^5.28.0",
       "react-type-animation": "^3.2.0",
       "redux": "^5.0.1",
       "redux-thunk": "^3.1.0",
       "redux-toolkit": "^1.1.2",
-      "sweetalert2": "^11.15.10",
-      "swiper": "^11.2.1",
+      "sweetalert2": "^11.17.2",
+      "swiper": "^11.2.5",
+      "tailwindcss": "^4.0.14",
       "yup": "^1.6.1"
    },
    "devDependencies": {
-      "@types/react": "^19.0.8",
-      "@types/react-dom": "^19.0.3",
+      "@types/react": "^19.0.10",
+      "@types/react-dom": "^19.0.4",
       "@vitejs/plugin-react": "^4.3.4",
-      "autoprefixer": "^10.4.20",
-      "eslint": "^9.18.0",
+      "autoprefixer": "^10.4.21",
+      "eslint": "^9.22.0",
       "eslint-plugin-react": "^7.37.4",
-      "eslint-plugin-react-hooks": "^5.1.0",
-      "eslint-plugin-react-refresh": "^0.4.18",
-      "postcss": "^8.5.1",
-      "tailwindcss": "^4.0.0",
-      "vite": "^6.0.11"
+      "eslint-plugin-react-hooks": "^5.2.0",
+      "eslint-plugin-react-refresh": "^0.4.19",
+      "vite": "^6.2.2"
    }
 }
